--- a/Ecomm/app/templates/app/home.html
+++ b/Ecomm/app/templates/app/home.html
@@ -113,7 +113,7 @@
 </div>
 <hr>
  <div class="mx-3">
-  <h2>Top Wear</h2>
+  <h2 align='center'>Top Wear</h2>
   <!-- Slider 2 -->
   <div class="owl-carousel" id="slider2">
    {%for T in topwears %}
@@ -136,7 +136,7 @@
  </div>
 <hr>
  <div class="mx-3">
-  <h2 >Mobiles</h2>
+  <h2 align='center' >Mobiles</h2>
   <!-- Slider 2 -->
   <div class="owl-carousel" id="slider2">
    {%for M in mobiles%}
