--- a/Ecomm/app/templates/app/addtocart.html
+++ b/Ecomm/app/templates/app/addtocart.html
@@ -19,7 +19,7 @@
        <p class="mb-2 text-muted small">{{cart.product.description}}</p>
        <div class="my-3">
         <label for="quantity">Quantity:</label>
-        <a class="minus-cart btn"     "><i class="fas fa-minus-square fa-lg"></i></a>
+        <a class="minus-cart btn"  pid="{{cart.product.id}}"><i class="fas fa-minus-square fa-lg"></i></a>
           <span id="quantity">{{cart.quantity}}</span>
         <a class="plus-cart btn" pid="{{cart.product.id}}"><i class="fas fa-plus-square fa-lg"></i></a>
        </div> 
@@ -84,7 +84,7 @@
     <a class="plus-cart btn"><i class="fas fa-plus-square fa-lg"></i></a>
    </div> 
    <div class="d-flex justify-content-between">
-    <a href="#" class="btn btn-sm btn-secondary mr-3">Remove item </a>        
+    <a href="#" class="btn btn-sm btn-secondary mr-3" removecart >Remove item </a>        
     <p class="mb-0"><span><strong>Rs. 320.00</strong></span></p>
    </div>
   </div>
