--- a/shopping/app/templates/app/base.html
+++ b/shopping/app/templates/app/base.html
@@ -24,7 +24,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
      <div class="container">
-       <a class="navbar-brand text-dark" href="/">SNAP BUY</a>
+       <a class="navbar-brand text-dark" href="/">SHOPPY BUY</a>
        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
        </button>
@@ -97,7 +97,7 @@
 
     <!-- Start Footer -->
     <footer class="container-fluid bg-secondary text-center p-2 mt-5">
-        <small class="text-dark">Copyright &copy; 2021 || Designed By Ainy|| </small>
+        <small class="text-dark">Copyright &copy; 2023 || Designed By Pranay|| </small>
         <img src="{% static 'app/images/payment.png' %}" alt="" srcset="" class="img-fluid" height="2px">
     </footer> <!-- End Footer -->
 
